--- a/accessibility-in-windows-8/style.css
+++ b/accessibility-in-windows-8/style.css
@@ -14,15 +14,20 @@ font-weight:700; font-style:normal}
   src:url(//:) format("no404"), url("segeo-ui/segeo-ui-light/segeo-ui-light-webfont.woff") format("woff"), url("segeo-ui/segeo-ui-light/segeo-ui-light-webfont.ttf") format("truetype"), url("segeo-ui/segeo-ui-light/segeo-ui-light-webfont.svgz#SegoeUILight") format("svg"), url("segeo-ui/segeo-ui-light/segeo-ui-light-webfont.svg#SegoeUILight") format("svg");
 font-weight:200; font-style:normal}
 
-html,body,header,section,footer,div,figure,figcaption,img,h1,h2,h3,h4,h5,h6,a,i{}
+html,body,header,section,footer,div,figure,figcaption,img,h1,h2,h3,h4,h5,h6,a,i,article,table,caption,thead,tbody,tr,th,td{}
 *{margin:0; padding:0; border:none}
 html,body{}
 body{font-family:"SegoeUINormal", sans-serif; font-weight:200; font-size:110%;}
 
+.content{}
+
 header{background-color:#5b1c74; height:100px; width:100%; margin-bottom:5em; position:fixed; top:0; right:0}
 .headertoc{}
 
-section{padding-left:2em; padding-right:2em; background-color:#fff}
+.main{clear:right; float:none}
+article{width:90%; margin-right:auto; margin-left:auto; outline:1px solid #000}
+section{padding-bottom:5em}
+.section-doc{}
 
 figure{text-align:center; margin-top:.15em; margin-bottom:.5em}
 .figimg{display:block; margin-left:auto; margin-right:auto}
@@ -36,26 +41,33 @@ img{}
 .branding{float:right}
     
 h1{color:#442359; font-weight:700; font-size:3.5em; margin-top:3.5em; margin-bottom:1.5em}
-.header2{font-family:"SegoeUINormal", sans-serif; font-style:italic; font-weight:700; color:#921c74; font-size:2.15em}
+h2{margin-top:1em}
+h2,h2 a{font-weight:700; color:#921c74}
+h2 a{text-decoration:none}
+h2{font-size:2.15em}
+.header2{font-style:italic}
 .header2index{margin-bottom:4em}
 h3{margin-bottom:1em; margin-top:1em}
-.header3{font-size:2.8em; font-weight:300; font-family:"SegoeUINormal", sans-serif; color:#5b1c74}
+.header3{font-size:2.8em; font-weight:300; color:#5b1c74}
 .tableheader{font-size:2.8em}
 .italic{font-style:italic}
 
 
-p{font-family:"SegoeUINormal", sans-serif; font-size:2.2em; padding:.4em .6em; margin-bottom:.55em}
-p a,p a:link{color:#0054a6;}
+p{font-size:2em; padding:.4em 0; margin-bottom:.55em}
+a,a:link{color:#0054a6;}
 
 ul,ol{list-style-type:none}
 .copyrightli{margin-bottom:.125em; padding-bottom:0; padding-top:0; margin-top:0}
 p.copyright{font-size:1.5em}
 
-.contentsection li{font-size:1.75em; color:#000; font-family:"SegoeUINormal", sans-serif; text-indent:.23em}
+.contentsection li,li{font-size:1.75em; color:#000; text-indent:.5em; margin-top:.5em; margin-bottom:.5em}
+li li{font-size:1em; text-indent:1em; margin-top:.25em; margin-bottom:.25em}
+li li li{font-size:1.25em}
+.sectionindex li{font-size:inherit; text-indent:0}
 .toc-root li{}
-.toc-root a{font-size:1.75em; color:#000; font-weight:700; font-family:"SegoeUINormal", sans-serif; text-indent:.23em}
+.toc-root a{font-size:1.75em; color:#000; font-weight:700; text-indent:.23em}
 .toc-root .toc-sub a{font-size:1.5em}
-.toc-root .toc-sub-sub a{font-size:1em}
+.toc-root .toc-sub-sub a{font-size:1.25em; font-weight:200}
 
 .toc-sub{margin-left:1em; margin-right:1em}
 .toc-sub-sub{margin-left:2em; margin-right:2em}
@@ -72,12 +84,20 @@ p.copyright{font-size:1.5em}
 
 
 
-.note{margin:.3em .5em; background-color:#f0ddf7; border:1px solid #949494}
+.note{margin:.3em auto; width:90%; background-color:#f0ddf7; border:1px solid #949494; padding:1em}
 .note p,.note li{font-style:italic}
+.note p{margin:0; padding:0}
 .note strong{font-style:normal}
 
-footer{margin-top:5em; position:relative; height:100px; border-top:1px solid #000; width:90%; margin-left:9%;}
+footer{position:relative; height:100px; border-top:1px solid #000; width:90%; margin-left:auto; margin-right:auto}
 .pageno{background-color:#5b1c74; position:absolute; right:0; top:0; width:300px; display:block; text-align:center; text-decoration:none; line-height:100px; height:100%; color:#fff}
 
-
+table{margin-top:1em; margin-bottom:1em; outline:1px solid #000}
+table p{font-size:inherit; margin:0; padding:0}
+caption{}
+thead{}
+tbody{}
+tr{}
+th{}
+td{}
 
